CPP programs/few CPP projects/.metadata/.plugins/org.eclipse.cdt.ui/assignment6_eclipse.build.log
16:17:48 **** Incremental Build of configuration Debug for project assignment6_eclipse ****
make all 
Building file: ../main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
../main.cpp:49:28: error: use of undeclared identifier 'TheAcceptableHeight'
        acceptableHeight = TheAcceptableHeight(height);
                           ^
../main.cpp:53:28: error: use of undeclared identifier 'TheAcceptableWeight'
        acceptableWeight = TheAcceptableWeight(weight);
                           ^
2 errors generated.
make: *** [main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

16:17:49 Build Failed. 3 errors, 0 warnings. (took 404ms)

